--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,12 @@ on:
   push:
   workflow_dispatch:
 
+env:
+  TOOLCHAIN_URL: https://github.com/openlgtv/buildroot-nc4/releases/download/webos-c592d84/arm-webos-linux-gnueabi_sdk-buildroot.tar.gz
+  TOOLCHAIN_SHA256: be5b4249177fc31b3f0120106c761f42ade54fd609a3bd090852899bbdd680b9
+  TOOLCHAIN_DIR: /opt/arm-webos-linux-gnueabi_sdk-buildroot
+  TOOLCHAIN_FILE: /opt/arm-webos-linux-gnueabi_sdk-buildroot/share/buildroot/toolchainfile.cmake
+
 jobs:
   build-native-component:
     strategy:
@@ -18,14 +24,17 @@ jobs:
         submodules: recursive
         fetch-depth: 0
 
-    - name: Download webOS NDK
-      run: wget -q https://github.com/webosbrew/meta-lg-webos-ndk/releases/download/1.0.g-rev.4/webos-sdk-x86_64-armv7a-neon-toolchain-1.0.g.sh -P ${{github.workspace}}/temp
+    - name: Download and unpack toolchain
+      working-directory: /opt
+      run: |
+        wget -q -O toolchain.tar.gz ${TOOLCHAIN_URL}
+        echo "${TOOLCHAIN_SHA256} toolchain.tar.gz"|sha256sum -c -
+        tar xf toolchain.tar.gz
 
-    - name: Install webOS NDK
-      run: chmod 755 ${{github.workspace}}/temp/webos-sdk-x86_64-armv7a-neon-toolchain-1.0.g.sh && sudo ${{github.workspace}}/temp/webos-sdk-x86_64-armv7a-neon-toolchain-1.0.g.sh -y
-
-    - name: Initialize NDK Environments
-      run: env -i bash -c '. /opt/webos-sdk-x86_64/1.0.g/environment-setup-armv7a-neon-webos-linux-gnueabi && env' >> $GITHUB_ENV
+    - name: Relocate toolchain
+      working-directory: ${{ env.TOOLCHAIN_DIR }}
+      run: |
+        ./relocate-sdk.sh
 
     - name: CMake Version
       run: cmake --version
@@ -36,7 +45,7 @@ jobs:
     - name: Build component
       working-directory: ${{github.workspace}}/build
       shell: bash
-      run: cmake -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCMAKE_TOOLCHAIN_FILE=/opt/webos-sdk-x86_64/1.0.g/sysroots/x86_64-webossdk-linux/usr/share/cmake/OEToolchainConfig.cmake .. && make hyperion-webos gm_backend halgal_backend dile_vt_backend vtcapture_backend
+      run: cmake -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -DCMAKE_TOOLCHAIN_FILE=$TOOLCHAIN_FILE .. && make hyperion-webos gm_backend halgal_backend dile_vt_backend vtcapture_backend
 
     - name: List files
       run: find .
@@ -49,9 +58,16 @@ jobs:
           ${{github.workspace}}/build/hyperion-webos
           ${{github.workspace}}/build/*.so
 
-
     - uses: DoozyX/clang-format-lint-action@v0.14
       with:
         source: './src'
         extensions: 'c,h,cpp'
         clangFormatVersion: 14
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: ${{ startsWith(github.ref, 'refs/tags/') && matrix.build-type == 'Release' }}
+      with:
+        files: |
+          ${{github.workspace}}/build/hyperion-webos
+          ${{github.workspace}}/build/*.so
